Add user profile page, implement QR code functionality, and enhance admin features
- Created a new user profile page with user details and articles.
- Added QR code overlay functionality to display QR codes for articles.
- Updated admin view to manage users with success/error alerts.
- Enhanced article management with sorting options and improved user interface.
- Integrated Google and GitHub authentication routes.
- Added CSS styles for user profile and QR code overlay.
- Improved user icon display logic across various views.

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "anhskohbo/no-captcha": "^3.7",
         "chillerlan/php-qrcode": "^5.0",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.19",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
         "tymon/jwt-auth": "^2.2"
